--- a/src/Terratype.nuget/App_Plugins/Terratype/Lang/en-us.xml
+++ b/src/Terratype.nuget/App_Plugins/Terratype/Lang/en-us.xml
@@ -39,10 +39,10 @@
 
     <key alias="searchHeading">Search</key>
 
-    <key alias="apperanceHeading">Apperance</key>
-    <key alias="apperanceHeightLabel">Height:</key>
-    <key alias="apperanceHeightDescription">The height of the map as displayed to the content editor in pixels</key>
-    <key alias="apperanceHeightPlaceholder">Height of map in pixels</key>
+    <key alias="appearanceHeading">Appearance</key>
+    <key alias="appearanceHeightLabel">Height:</key>
+    <key alias="appearanceHeightDescription">The height of the map as displayed to the content editor in pixels</key>
+    <key alias="appearanceHeightPlaceholder">Height of map in pixels</key>
 
     <key alias="iconHeading">Icon</key>
     <key alias="iconPredefineLabel">Predefine:</key>
