--- a/src/Providers/GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
+++ b/src/Providers/GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
@@ -113,8 +113,9 @@
     <key alias="versionDescription">Which release of Google Maps V3 would you like to target (Note: Even when specifying a specific version the loaded version will vary depending on your browser)</key>
     <key alias="version3">Stable</key>
     <key alias="version3exp">Experimental</key>
+	<key alias="version333">3.33 (Released 16 May 2018)</key>
 	<key alias="version332">3.32 (Released 13 February 2018)</key>
-	<key alias="version331">3.31 (Released 13 February 2018)</key>
+	<key alias="version331">3.31 (Also Released 13 February 2018)</key>
 	<key alias="version330">3.30 (Released 15 August 2017)</key>
 	<key alias="version329">3.29 (Released 5 July 2017)</key>
 	<key alias="version328">3.28 (Released 15 February 2017)</key>
